# family-budget

./: .gitignore  Dockerfile  docker-compose-dev.yml  pyproject.toml
familybudget/: .coveragerc  manage.py  pytest.ini
familybudget/apps/budgets/: apps.py  urls.py
familybudget/apps/users/: admin.py  forms.py  models.py  urls.py  views.py
familybudget/apps/users/migrations/: 0001_initial.py
familybudget/apps/users/static/users/css/: styles.css
familybudget/apps/users/templates/users/: login.html  register.html
familybudget/apps/users/tests/: factories.py  test_forms.py  test_urls.py  test_views.py
familybudget/config/: asgi.py  urls.py  wsgi.py
familybudget/config/settings/: base.py  develop.py
familybudget/static/css/: styles.css
familybudget/templates/: base.html  home.html
